<resources>
    <string name="app_name">JamaUdhar</string>
    <string name="submit">Submit</string>
    <string name="hintshopname">Enter Your Shop Name!</string>
    <string name="hintmobilenumber">Enter Mobile Number!</string>
    <string name="hintemailaddress">Enter Your EmailAddress!</string>
    <string name="hintcontactperson">Enter Your ContactPerson!</string>
    <string name="titleshopreg">Shop Details</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="profile_menu">Profile</string>
    <string name="customers_menu">Customers</string>
    <string name="items_menu">Items</string>
    <string name="trancations_menu">Trancations</string>
    <string name="upload">Upload</string>
</resources>
