<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgreen"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/white">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_50sdp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileimg"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/lightgreen"
                android:src="@drawable/user"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp">

                <EditText
                    android:id="@+id/shopname"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintshopname"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp">

                <EditText
                    android:id="@+id/shopmobilenumber"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintmobilenumber"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp">

                <EditText
                    android:id="@+id/shopemailaddress"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hintemailaddress"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp">

                <EditText
                    android:id="@+id/shopcontactperson"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hintcontactperson"
                    android:inputType="textCapCharacters" />
            </com.google.android.material.textfield.TextInputLayout>





            <Button
                android:id="@+id/buttonsubmitshop"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/button"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
